[gd_scene load_steps=3 format=3 uid="uid://bu6ghsc6p3e5c"]

[ext_resource type="Script" uid="uid://c244l41s866it" path="res://UI/Menu/render_controller/render_controller.gd" id="1_jmhxn"]
[ext_resource type="Script" uid="uid://b4m12prynakb5" path="res://UI/generic/menu_button/menu_button.gd" id="2_wmmsh"]

[node name="RenderOptions" type="VBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_jmhxn")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Render"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="RenderMode" type="MenuButton" parent="."]
layout_mode = 2
text = "Render Mode"
flat = false
item_count = 3
popup/item_0/text = "seperate Animations"
popup/item_0/id = 0
popup/item_1/text = "All as a Spritesheet"
popup/item_1/id = 1
popup/item_2/text = "Eight directions"
popup/item_2/id = 2

[node name="Label" type="Label" parent="RenderMode"]
layout_mode = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 161.0
offset_bottom = 26.0
text = "Seperate Animations"

[node name="StartRender" type="Button" parent="."]
auto_translate_mode = 2
layout_mode = 2
action_mode = 0
text = "Start Render
"

[node name="PopupMenu" type="PopupMenu" parent="."]
auto_translate_mode = 1

[node name="MenuButton" type="MenuButton" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "File"
item_count = 2
popup/item_0/text = "Load Model"
popup/item_0/id = 0
popup/item_1/text = "Open directory"
popup/item_1/id = 1
script = ExtResource("2_wmmsh")

[node name="FileDialog" type="FileDialog" parent="MenuButton"]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(454, 300)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*.glb")
show_hidden_files = true

[connection signal="button_down" from="StartRender" to="." method="_on_start_render_button_down"]
[connection signal="dir_selected" from="MenuButton/FileDialog" to="." method="_on_file_dialog_dir_selected"]
